<resources>

    <string name="app_name">Fuel Consumption</string>
    <string name="hello_world">Test text!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_fuel">Fuel Consumption</string>
    <string name="price_gasoline">Price 1 liter gasoline.</string>
    <string name="consump_gasoline">Consumption gasoline your car(L/100km).</string>
    <string name="header">Calculation of gasoline and distance traveled.</string>
    <string name="distance">Enter how much kilometers you drove.</string>
    <string name="sum">Enter sum of money.</string>
    <string name="gasoline">Enter amount of gasoline in liters.</string>
    <string name="ref_result">Press OK.</string>
    <string name="check_box1">Twice distance.</string>
    
    <string name="result1_1">You spent </string>
    <string name="result1_2"> liters of gasoline and </string>
    <string name="result2_1">You buy</string>
    <string name="result2_2">liters of gasoline and will travel</string>
    <string name="result2_3">km.</string>
     <string name="result3_1">You will drive</string>
     <string name="out_feed">Out Result in</string>
    
    <string name="error_1"> Fill out the fields and click OK.</string>
    <string name="error_net">No connection to the Internet</string>
    
    <string name="button_ok">OK</string>
     <string name="button_up">Update</string>
    <string name="First_text">Welcom!</string>

    <string name="button_next">Next</string>
    <string name="textView_price_title">Fuel costs:</string>
    <string name="textView_comp_title">Fuel consumption:</string>
    <string name="textView_invitation">Complete the following lines.\nYou can fill them not all.</string>
    <string name="fuel_comp_empty">unknown</string>
    <string name="price_empty">Enter the cost of fuel</string>
    <string name="liters">L/100 km</string>
    <string name="way1">one way</string>
    <string name="way2">there and back</string>

    <string-array name="ways">
        <item>one way</item>
        <item>there and back</item>
    </string-array>

    <string name="result_title">Result of calculations</string>

</resources>