<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FF8800"
    android:id="@+id/main_layout2">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:clickable="true"
        android:baselineAligned="false"
        android:background="#FF8800">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/header"
            android:id="@+id/textView5"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold|normal"
            android:textSize="@dimen/padding_medium"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/First_text"
            android:id="@+id/textView6"
            android:layout_marginTop="13dp"
            android:textStyle="normal"
            android:textSize="@dimen/padding_medium"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:weightSum="1" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:baselineAligned="false"
                android:clickable="false"
                android:layout_gravity="center_horizontal"
                android:weightSum="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_gasoline"
                    android:id="@+id/textView7"
                    android:textStyle="bold|normal"
                    android:textSize="@dimen/padding_half_medium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/editText_price"
                        android:layout_weight="1"
                        android:inputType="numberDecimal" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/spinner2"
                        android:layout_weight="1" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:baselineAligned="false"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consump_gasoline"
                    android:id="@+id/textView8"
                    android:textStyle="bold|normal"
                    android:textSize="@dimen/padding_half_medium" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/editText_comp"
                    android:inputType="numberDecimal" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_next"
            android:id="@+id/button_next"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp" />
    </LinearLayout>
</LinearLayout>