<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/picture_frame">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/result_title"
            android:id="@+id/textView_result_title"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:textStyle="normal"
            android:textSize="@dimen/padding_medium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textView_price_title"
            android:id="@+id/textView"
            android:layout_weight="1"
            android:layout_marginTop="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textView_comp_title"
            android:id="@+id/textView2"
            android:layout_weight="1"
            android:layout_marginTop="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:id="@+id/linearLayout2" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textView3"
            android:layout_weight="1"
            android:layout_marginTop="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:id="@+id/linearLayout3" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textView4"
            android:layout_weight="1"
            android:layout_marginTop="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:id="@+id/linearLayout4" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textView5"
            android:layout_weight="1"
            android:layout_marginTop="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textView6" />

        <Spinner
            android:layout_width="146dp"
            android:layout_height="40dp"
            android:id="@+id/spinner"
            android:layout_marginLeft="6dp" />
    </LinearLayout>
</LinearLayout>